@@ -1,6 +1,8 @@
 devel
 -----
 
+* The query explainer now displays the vector index used by EnumerateNearVectoNode.
+
 * FE-636: bump webpack-dev-middleware from 5.3.3 to 5.3.4.
 
 * FE-636: bump braces from 3.0.2 to 3.0.3.
